@@ -695,8 +695,10 @@ view.status.io-1=I/O: 1 operation in progress
 view.status.io.done=Input/output complete
 view.status.caret-tooltip=Line and column number indicator
 view.status.mode-tooltip=Current edit mode, fold mode, and encoding
+view.status.wrap-tooltip=Word wrap mode (click to change)
 view.status.multi-tooltip=Multiple selection indicator (click to change)
 view.status.overwrite-tooltip=Overwrite/insert mode indicator (click to change)
+view.status.linesep-tooltip=Line separator (click to change)
 view.status.memory-tooltip=Java heap memory: {0}Kb/{1}Kb
 view.status.narrow=Invoke "Expand All Folds" to make all text visible again
 view.status.bracket=Matches "{0}"
